--- a/source/_includes/post/adsense_right.html
+++ b/source/_includes/post/adsense_right.html
@@ -1,11 +1,11 @@
 <div class='ad-right'>
   <script type="text/javascript"><!--
     google_ad_client = "ca-pub-4870755332408030";
-    /* DevFolyamArticle */
-    google_ad_slot = "1829466906";
-    google_ad_width = 300;
-    google_ad_height = 250;
-  //-->
+    /* FolyamArticle */
+    google_ad_slot = "3795394501";
+    google_ad_width = 120;
+    google_ad_height = 90;
+    //-->
   </script>
   <script type="text/javascript"
           src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
